Text Editor task both html and plain content will display

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,6 @@
     transform: rotate(360deg);
   }
 }
+/* For Editor classnames */
+/* toolbarClassName="toolbarClassName" */
+/* wrapperClassName="wrapperClassName" */
